--- a/css/styles.css
+++ b/css/styles.css
@@ -135,7 +135,8 @@ a:hover {
   font-weight: 400;
 }
 .black-title {
-  background-color: #2f303a;
+  background: rgba(47, 48, 58, 0.4);
+  background-image: url(//images/people.jpg);
 }
 
 .item {
@@ -162,12 +163,18 @@ h1 {
   display: flex;
   background-color: #2196f3;
   color: rgb(236, 238, 240);
-  border-radius: 2px;
+  border-radius: 4px;
   cursor: pointer;
   border: none;
-  max-width: 200px;
-  max-height: 50px;
+  width: 200px;
+  height: 50px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   justify-content: center;
+  align-content: center;
+  font-family: Roboto;
+  font-weight: 700;
+  line-height: 30px;
   margin-bottom: 30px;
   margin: 0 auto;
 }
@@ -353,5 +360,9 @@ h1 {
   letter-spacing: 0.03em;
 }
 .icons-menu {
-  fill: solid #757575;
+  fill: #757575;
+  cursor: pointer;
+}
+.icons-menu:hover {
+  fill: #2196f3;
 }
