--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@ a {
 a:hover {
   color: #2196f3;
 }
+
 .container {
   width: 100%;
   max-width: 1200px;
@@ -134,9 +135,21 @@ a:hover {
   font-family: Roboto;
   font-weight: 400;
 }
+
 .black-title {
-  background: rgba(47, 48, 58, 0.4);
-  background-image: url(//images/people.jpg);
+  border: 1px, solid, rgba(0, 0, 0, 1);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  background-color: #000000;
+  background-image: url(../images/people.jpg);
+  background-size: cover;
+  background-position: center;
+
+  background: linear-gradient(
+      90deg,
+      rgba(2, 0, 36, 1) 2%,
+      rgba(64, 64, 91, 0.9641981792717087) 100%
+    )
+    url(../images/people.jpg);
 }
 
 .item {
@@ -178,26 +191,41 @@ h1 {
   margin-bottom: 30px;
   margin: 0 auto;
 }
+.pink-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  border: none;
+  border-radius: 4px;
+
+  width: 270px;
+  height: 120px;
+  background-color: #f5f4fa;
+}
+.small-content {
+  max-width: 70px;
+  max-height: 70px;
+  padding-left: 100px;
+  padding-right: 100px;
+  padding-bottom: 25px;
+  padding-top: 25px;
+}
 .four-text {
   background-color: none;
 }
 .lorem {
   display: flex;
-  align-items: center;
   justify-content: center;
-  max-width: 1170px;
+  align-items: center;
+
   margin-top: 94px;
   margin-bottom: 94px;
-  padding-right: 0;
-  padding-left: 0;
 }
 .content {
   display: flex;
-
   justify-content: center;
   align-items: center;
-
-  gap: 30px;
 }
 .lorem-text {
   font-weight: 700;
@@ -282,6 +310,7 @@ h1 {
 .small-box {
   display: block;
   max-width: 270px;
+  height: 428px;
   margin: 0 auto;
   border-radius: 4px;
   overflow: hidden;
@@ -309,8 +338,33 @@ h1 {
   font-size: 16px;
   font-weight: 500;
 
-  justify-content: center;
   color: #212121;
+}
+
+.wheel-box {
+  display: flex;
+  justify-content: center;
+  align-items: space-around;
+  gap: 20px;
+  margin: 0 auto;
+  padding-left: 0;
+  padding-right: 0;
+}
+.wheel {
+  background-color: #ffffff;
+  border-radius: 50%;
+  width: 44px;
+  height: 44px;
+  fill: #afb1b8;
+}
+.dot {
+  fill: #afb1b8;
+}
+.wheel:hover .dot {
+  fill: white;
+  border-radius: 50%;
+  cursor: pointer;
+  background-color: #2196f3;
 }
 .job {
   display: flex;
@@ -359,10 +413,62 @@ h1 {
   line-height: 24px;
   letter-spacing: 0.03em;
 }
+
+.join-us {
+  width: 113px;
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: 700;
+  color: rgba(255, 255, 255, 1);
+  line-height: 16.41px;
+  letter-spacing: 0.03em;
+  padding-top: 45px;
+  padding-left: 251px;
+}
+.join-us-position {
+  display: flex;
+  justify-content: flex-start;
+}
 .icons-menu {
   fill: #757575;
   cursor: pointer;
 }
 .icons-menu:hover {
   fill: #2196f3;
+}
+.clients {
+  background-color: #ffffff;
+}
+.clients-box {
+  padding-left: 32px;
+  padding-right: 32px;
+  padding-bottom: 14.25px;
+  padding-top: 17.71px;
+}
+.grey-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  width: 170px;
+  height: 92px;
+  background-color: #ffffff;
+  box-shadow: 0px, 4px rgba(0, 0, 0, 0.25);
+  fill: #757575;
+}
+
+.grey-box:hover {
+  fill: #2196f3;
+  border: 1px solid #2196f3;
+}
+.client-position {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  padding-left: 0;
+  padding-right: 0;
+  padding-bottom: 80px;
 }
