--- a/css/styles.css
+++ b/css/styles.css
@@ -218,7 +218,8 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-
+  gap: 30px;
+  margin: auto;
   margin-top: 94px;
   margin-bottom: 94px;
 }
@@ -322,14 +323,17 @@ h1 {
   display: block;
   max-width: 370px;
   margin: 0 auto;
-  border-color: #eeeeee solid;
+  border-color: #1e1d1d solid;
   border-radius: 4px;
   overflow: hidden;
   background-color: #ffffff;
   box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 }
-
+.large-box:hover {
+  cursor: pointer;
+  box-shadow: 0 10px 10px -5px rgba(0, 0, 0, 0.3);
+}
 .title-box {
   display: flex;
   justify-content: center;
@@ -340,32 +344,46 @@ h1 {
 
   color: #212121;
 }
-
+.icons-position {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 206px;
+}
 .wheel-box {
   display: flex;
   justify-content: center;
-  align-items: space-around;
+  align-items: center;
+
   gap: 20px;
-  margin: 0 auto;
-  padding-left: 0;
-  padding-right: 0;
 }
 .wheel {
-  background-color: #ffffff;
   border-radius: 50%;
   width: 44px;
   height: 44px;
   fill: #afb1b8;
 }
+.back-icon {
+  background: #ffffff;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  cursor: pointer;
+  padding: 10px;
+}
 .dot {
   fill: #afb1b8;
 }
-.wheel:hover .dot {
-  fill: white;
-  border-radius: 50%;
-  cursor: pointer;
-  background-color: #2196f3;
+.back-icon:hover {
+  background: #2196f3;
 }
+.back-icon:hover .dot {
+  fill: #ffffff;
+}
+
 .job {
   display: flex;
   justify-content: center;
@@ -471,4 +489,31 @@ h1 {
   padding-left: 0;
   padding-right: 0;
   padding-bottom: 80px;
+}
+.column-footer {
+  display: flex;
+}
+.back-icon-footer {
+  background: rgba(0, 0, 0, 0.25);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  cursor: pointer;
+  padding: 10px;
+}
+.dot-footer {
+  fill: #ffffff;
+}
+.back-icon-footer:hover {
+  background: #2196f3;
+  cursor: pointer;
+}
+.wheel-footer {
+  display: flex;
+  gap: 30px;
+  margin-left: 300px;
+  margin-bottom: 55px;
 }
