--- a/css/styles.css
+++ b/css/styles.css
@@ -137,6 +137,8 @@ a:hover {
 }
 
 .black-title {
+  max-width: 1600px;
+  margin: 0 auto;
   border: 1px, solid, rgba(0, 0, 0, 1);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   background-color: #000000;
@@ -348,13 +350,12 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  max-width: 206px;
 }
 .wheel-box {
   display: flex;
   justify-content: center;
   align-items: center;
-
+  padding-left: 0;
   gap: 20px;
 }
 .wheel {
@@ -457,12 +458,7 @@ h1 {
 .clients {
   background-color: #ffffff;
 }
-.clients-box {
-  padding-left: 32px;
-  padding-right: 32px;
-  padding-bottom: 14.25px;
-  padding-top: 17.71px;
-}
+
 .grey-box {
   display: flex;
   justify-content: center;
